# filamentFields

./: .gitignore  CMakeLists.txt  README.md  analyze_nest_data.py  build_extension.sh  build_for_python.sh  compile.sh  entaglement_results.py  entanglement_ca.cpp  entanglement_evolution.py  filamentFields.cpp  filamentFields.h  filamentFieldsTest  filamentFieldsTest.cpp  filamentFields_entanglement_only.cpp  filamentFields_volume_fraction_only.cpp  plot_<A(y)A(y+b)>_wrt_b.py  requirements.txt  sbatch.sh  test.ipynb  test.py  test2.py  test3.py  visualize_and_compute_ent.py  volume_fraction_results.py  wrapper.cpp
cross_sections/x/: Note.txt
cross_sections/x/0/: entanglement_results_x0.csv
cross_sections/x/250/: entanglement_results_x250.csv
cross_sections/x/500/: entanglement_results_x500.csv
cross_sections/x/750/: entanglement_results_x750.csv
cross_sections/z/: Note.txt
cross_sections/z/0/: entanglement_results_z0.csv
cross_sections/z/100/: entanglement_results_z100.csv
cross_sections/z/25/: entanglement_results_z25.csv
cross_sections/z/50/: entanglement_results_z50.csv
cross_sections/z/75/: data.csv.txt  entanglement_results_z75.csv
data/: output.txt  readme.txt
tests/: test_examples.py
use_cases/: use_case_basic.py  use_case_benchmark.py  use_case_large_csv.py  use_case_large_packing.py  use_case_simple.py  use_case_visualize.py
